# uniprot-tools

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: jekyll-gh-pages.yml
docs/: index.html
docs/api_pydoctor_docs/: all-documents.html  classIndex.html  fullsearchindex.json  moduleIndex.html  nameIndex.html  objects.inv  searchindex.json  undoccedSummary.html  uniprot_tools.concurrency_tools.TqdmParallel.html  uniprot_tools.concurrency_tools.html  uniprot_tools.fasta_tools.html  uniprot_tools.get_info.html  uniprot_tools.pep_search.CustomTQDM.html  uniprot_tools.pep_search.html  uniprot_tools.this_dir.html
scripts/: generate_docs.sh  run_coverage.sh
tests/: tests.py
tests/ground_truth/: read_fasta_test_no_sort.json  read_fasta_test_yes_sort.json  taxonomy_info_table.csv  taxonomy_urls.json  uniparc_info_table.csv  uniparc_urls.json  uniprotkb_info_table.csv  uniprotkb_urls.json  write_no_sort_no_duplicates.fasta  write_no_sort_yes_duplicates.fasta  write_yes_sort_no_duplicates.fasta  write_yes_sort_no_duplicates_sort_by_seq.fasta  write_yes_sort_yes_duplicates.fasta  write_yes_sort_yes_duplicates_sort_by_seq.fasta
tests/test_data/: delete_me.ipynb  test_ids.json  test_peptides.json  test_peptides_2.json
uniprot_tools/: concurrency_tools.py  fasta_tools.py  get_info.py  pep_search.py  process_uniprot_output.py  this_dir.py
uniprot_tools/api_access/: get_info.py
uniprot_tools/peptide_search/: pep_search.py
