[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "uniprot_tools"
version = "0.0.1"
authors = [{ name = "Ben Drucker", email = "ben.drucker@icloud.com" }]
description = "Useful tools when working with Uniprot.org"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = ["pandas", "requests", "tqdm", "numpy"]
license = { file = "LICENSE" }
keywords = ["uniprot", "tools", "parallel", "api"]

[tool.coverage.run]
omit = [".vscode/*", "venv/*", "setup.py"] #, "tests/*"]